CTest: "make" level errors not caught with CTEST_USE_LAUNCHERS
Here is a case where CTest failed to parse a build failure, or at least failed to notify CDash of the failure:
https://open.cdash.org/buildSummary.php?buildid=6031578
CDash reports that there are no build failures and no warnings, but there was indeed a failure as seen in the full notes for the build, available here:
https://open.cdash.org/viewNotes.php?buildid=6031578
In case the results expire when this is viewed, the relevant output showing the build failure that gets missed is
...
[ 92%] Generating Python wrapper sources for vtkOpenGLProjectedTetrahedraMapper
[ 92%] Generating Python wrapper sources for vtkSimple2DLayoutStrategy
[ 92%] Generating Python wrapper sources for vtkSimple3DCirclesStrategy
[ 92%] Generating Python wrapper sources for vtkOpenGLRayCastImageDisplayHelper
[ 92%] Building CXX object Filters/General/Testing/Cxx/CMakeFiles/vtkFiltersGeneralCxxTests.dir/TestDeformPointSet.cxx.o
[ 92%] Generating Python wrapper sources for vtkSliceAndDiceLayoutStrategy
make[2]: *** No rule to make target `/Users/kitware/dashboards/buildbot-slave/f92cbf3c/source/Rendering/VolumeOpenGL2/vtkOpenGLVolumeLookupTable.h', needed by `CMakeFiles/vtkOpenGLVolumeGradientOpacityTablePython.cxx'. Stop.
make[2]: *** Waiting for unfinished jobs....
[ 92%] Generating Python wrapper sources for vtkOpenGLTransferFunction2D
make[1]: *** [CMakeFiles/vtkRenderingVolumeOpenGL2Python.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
[ 92%] Building CXX object Rendering/Core/Testing/Cxx/CMakeFiles/vtkRenderingCoreCxxTests.dir/TestActor2DTextures.cxx.o
[ 92%] Generating Python wrapper sources for vtkSpanTreeLayoutStrategy
[ 92%] Generating Python wrapper sources for vtkSplineGraphEdges
[ 92%] Generating Python wrapper sources for vtkSquarifyLayoutStrategy
[ 92%] Generating Python wrapper sources for vtkStackedTreeLayoutStrategy
[ 92%] Building CXX object Filters/Core/Testing/Cxx/CMakeFiles/vtkFiltersCoreCxxTests.dir/TestDelaunay3D.cxx.o
[ 92%] Building CXX object CMakeFiles/vtkRenderingParallelPython.dir/CMakeFiles/vtkTreeCompositerPython.cxx.o
...
Originally reported at https://github.com/Kitware/CDash/issues/873.
Edited by Brad King