ctest: report make-level errors to CDash when using launchers

Fixes: #19545